# seord

./: .gitignore  CMakeLists.txt
src/3rd/: serd_config.h.in  sord_config.h.in
